# infg

./: Cargo.toml  backtrace.txt  log.json  log.json.old
src/: grid.rs  main.rs  sector.rs
src/ai/: fragments.rs  mod.rs
src/sim/: body.rs  bytes.rs  economy.rs  entity.rs  entityplus.rs  mod.rs
