[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hadron = { path = "../hadron" }
once_cell = "1.17.0"
serde = {version = "1.0", features = ["derive", "rc"]}
const-fnv1a-hash = "1.1.0"
any_vec = "0.11.0"